--- a/gb/20/9/10/n12395450.md
+++ b/gb/20/9/10/n12395450.md
@@ -3,8 +3,7 @@
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>吐槽伊能静太唠叨 秦昊获赞有幽默感</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/09/1606280103161487-600x400.jpg" />
-<h6>秦昊伊能静夫妇资料照。（大纪元资料室
-</h6>
+<h6>秦昊伊能静夫妇资料照。（大纪元资料室</h6>
 <hr>
 	<p>【大纪元2020年09月11日讯】（大纪元记者钟又淳综合报导）9月9日晚，大陆男星秦昊在最新一期《脱口秀大会》上亮相。在说明来到节目很紧张的原因时，他直指特别怕和话密的主持人待在一起，并顺便吐槽老婆伊能静也是太唠叨。网友被秦昊的幽默笑翻。</p>
 <p>在9月9日播出的一期《脱口秀大会》中，秦昊吐槽伊能静比节目主持人大张伟的话还多。他一出场就自我介绍说：“我这个人，特别怕和话密的人待着。我刚才还在想，要大张伟在，干脆我就回家算了，后来我一想，我老婆在家呢。算了，还是这儿清净。”</p>
@@ -13,36 +12,33 @@
 <p>在最近一期的综艺节目《婆婆和妈妈》中，伊能静因为“话多”跟秦昊闹别扭。起因是秦昊对他们家的狗狗特别宠爱，伊能静说秦昊对狗比对她还有耐心，结果秦昊回答：“因为它话没你那么多啊！”</p>
 <p>或许伊能静对这句话可能有些“耿耿于怀”，但在秦昊看来，这是有幽默感的一句回答。而且，秦昊吐槽伊能静话多并没有引起网友的反感，因为都知道他与伊能静夫妻感情深厚。网友直呼，一向不苟言笑的秦昊“竟然这么有幽默感”。</p>
 <p>责任编辑：叶紫微</p>
-	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/17/11/13/n9836430.md#1">秦昊接机路上车子遭撞 心系伊能静放过肇事者</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/17/11/15/n9841527.md#1">秦昊车子被撞肇事者逃逸 伊能静诠释“道歉”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/20/n10235097.md#1">秦昊赞女人是家的主心骨 伊能静：原来你知道</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/20/7/16/n12261612.md#1">对待女儿儿子大不同 秦昊模仿汪小菲笑翻众人</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/11/n14549246.md#1">担忧被裁员 Z世代最不愿在职场使用AI</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/12/n14571859.md#1">从裁员到高校课程：AI改变职场与教育</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639479.md#1">华大人工智能计划获千万美元捐助</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639042.md#1">华州退休生活成本高居全美第五</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/6/20/n11334759.md#1" target="_blank">宋征时：迟浩田披露中共出卖大面积北方领土</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/29/n11417416.md#1" target="_blank">美大使发推特 谴责中共迫害法轮功</a></li>
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/07/20/a102898210.md#1" target="_blank">美国务卿：中共迫害法轮功21年 必须停止</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/8/3/n10612921.md#1" target="_blank">炮灰与英雄——中美韩战军人的命运</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/9/3/7/n2454149.md#1" target="_blank">【热点互动】自焚  中共自导的梦魇(2)</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/30/n14301175.md#1">一两黄金一块砖 紫禁城“金砖”怎地这么高贵？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/18/n14293177.md#1">《货郎图》——有趣的故事传承</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303783.md#1">【未解之谜】美国日全食开启灾难之门 比格斯预言盘点</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300489.md#1">“别人”做的饭菜</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/26/n14299116.md#1">奇闻异事：鱼肉动物从天而降 竟然个个都是预兆？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304625.md#1">【晚间新闻】贺锦丽副手2选1 宾州造势成焦点</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304624.md#1">【全球新闻】7科技巨头日蒸发万亿美元 AI衰退？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14304838.md#1">【新闻大家谈】大清洗正猛 北戴河高官躺平？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/3/n14304123.md#1">30岁女子每天花2小时做副业 年赚33万美元</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/25/n14298657.md#1">Costco六种最佳干货 全部买花费不足100美元</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/3/n14304255.md#1">《心的温度》上映首日 2名观众 票房仅91元</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14304841.md#1">TWICE周子瑜首张个人专辑 9月6日发行</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14304932.md#1">《龙卷风暴》全球票房不敷成本 8月线上发行</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305321.md#1">陈思诚新片《解密》票房遇冷 估计至少亏3亿</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304294.md#1">知名摇滚天团“史密斯飞船”巡演中宣布退休</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304554.md#1">蔬菜煎蛋加什么“菜”最对味？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14304786.md#1">蛋黄越橘越营养？营养师揭鸡蛋6大迷思</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300801.md#1">研究：常见家用化学品会攻击关键脑细胞</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/26/n14298933.md#1">常常咳嗽吗？2食疗帮你摆脱反复久咳</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304411.md#1">感觉脚痛或疲劳？ 可能是你的凉鞋害的</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649620.md#1">幸福不是你能左右多少人，而是多少人愿意在你的左右</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647568.md#1">执子之手 不离不弃 一对美国夫妻的爱情传奇</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648578.md#1">大雪节气寒冬里 如何掌握养生要则与禁忌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14645924.md#1">王九龄的《题旅店》：半梦半醒思乡国</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/17/n14637529.md#1">【古道人生】书生在饥荒中救一富家女成大富</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651592.md#1">【直播】反对中共活摘器官和侵犯人权行为论坛</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652090.md#1">【十字路口】防疫或布疫？深夜无人机洒怪液</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652050.md#1">【直播】听证会：中共在拉丁美洲的组织犯罪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650176.md#1">为捧儿子向佐亏数亿 向华强：上天给我的教训</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638627.md#1">中产阶级想成为富人 需避免五大消费习惯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650329.md#1">十年来首次降价 五粮液开票价每瓶下调119元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651351.md#1">迪丽热巴疑遭替身取代宣传新戏 视频吓坏网友</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650354.md#1">Netflix若收购华纳兄弟 将拥有9个系列影视</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650211.md#1">《阿凡达3》香港撤档 片名后缀因敏感字遭删</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650198.md#1">港星黄日华宣布退圈 告别45年演艺生涯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650330.md#1">为什么飞机客舱的窗户是圆形的？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651688.md#1">如何预防车窗起雾？让Toyota告诉你</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650995.md#1">不小心让强力胶沾到物体表面 如何清除？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651622.md#1">为何在天气寒冷时会手脚冰冷？如何改善？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650878.md#1">研究：说话时善用手势可以增加说服力</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/9/10/n12395450.htm">吐槽伊能静太唠叨 秦昊获赞有幽默感</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/20/9/10/n12395450.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
